# kw_condition

./: .gitignore  .gitmodules  2016-08-08.txt  2016-08-09.txt  2016-08-10.txt  LICENSE  README.md  buy_sample_log.txt  debugModule.js  ki_condition_start.bat  kiwoom.py  kw_util.py  main.py  main_util.py  mainwindow.ui  mainwindow_ui.py  pandasmodel.py  pyproject.toml  resource.qrc  resource_rc.py  slacker_helper.py  stock_calc.py  user_setting.py  util.py
docs/draw.io/: kiwoom_state.xml
docs/notebooks/: tutorial.ipynb
draw.io/: kiwoom_state.xml
kw_condition/: __init__.py
kw_condition/backend/: KiwoomOpenApiPlus.py  __init__.py
kw_condition/strategy/: QuantTrading.py  Scalping.py
kw_condition/utils/: common_util.py  kiwoom_easy_login.py  kiwoom_easy_news_crawler.py  kiwoom_openapi_updater.py  kw_util.py
log/: chegyeol.json  jango.json
qml/: MainForm.ui.qml  main.qml
