[tool.poetry]
name = "kw_condition"
version = "0.1.0"
description = ""
authors = ["charles"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.4"
slacker = "^0.14.0"
oauth2client = "^4.1.3"
gspread = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
