[tool.poetry]
name = "kw_condition"
version = "0.1.0"
description = ""
authors = ["Charles <coreanq@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PySide2 = "^5.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
