[tool.poetry]
name = "kw_condition"
version = "0.1.0"
description = ""
authors = ["Charles <coreanq@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PySide2 = "^5.15.2"
matplotlib = "^3.5.2"
mplfinance = "^0.12.9-beta.1"
openpyxl = "^3.0.10"
pywinauto = "^0.6.8"
pyinstaller = "^5.5"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
